fixed some alignment

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ body {
 
 
 .trending-now{
-    padding-top: 5vh;
+    padding-top: 10vh;
     padding-bottom: 3vh;
     color: white;
     font-weight: 800;
